syntax = "proto3";

package pcbook;


import "proto/processor_message.proto";
import "proto/storage_message.proto";
import "proto/keyboard_message.proto";
import "proto/screen_message.proto";
import "proto/memory_message.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message Laptop{
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    repeated GPU gpus = 5;
    Memory ram = 6;
    Keyboard keyboard = 7;
    Screen screen = 8;
    repeated Storage storages  = 9;
    oneof weight{
        double weight_kg = 10;
        double weight_lb = 11;
    }
    double price_usd = 12;
    uint32 release_year = 13;
    google.protobuf.Timestamp updated_at = 14;
}